--- a/日志/2019/0812-0818.md
+++ b/日志/2019/0812-0818.md
@@ -86,3 +86,69 @@ const asyncIterator = run();
 
 ---
 
+**[Explaining the globalThis ES Proposal](https://2ality.com/2019/08/global-this.html)**
+
+There are two kinds of global variables:
+1. Global declarative variables are normal variables. They are created in the top level of a script, via `const`, `let`, and `class` declarations.
+2. Global object variables are stored in properties of the global object.
+    - They are created in the top level of a script, via var and function declarations.
+    - They can also be created, deleted, and read via the global object.
+    - Other than that, they work like normal variables.
+
+The global object can be accessed via globalThis.
+```html
+<script>
+  const one = 1;
+  var two = 2;
+</script>
+<script>
+  // All scripts share the same top-level scope:
+  console.log(one); // 1
+  console.log(two); // 2
+  
+  // Not all declarations create properties of the global object:
+  console.log(globalThis.one); // undefined
+  console.log(globalThis.two); // 2
+</script>
+```
+
+The value of this depends on the current scope:
+1. Top level of scripts: global object (in browsers)
+2. Top level of ECMAScript modules: undefined
+3. During a function call:
+    - Strict mode (including modules): undefined
+    - Sloppy mode: same as global this
+
+In browsers, the global this does not point directly to the global object.
+Browsers achieve that by distinguishing two objects:
+- Window is the global object. It changes whenever the location changes.
+- WindowProxy is an object that forwards all accesses to the current Window. This object never changes.
+
+`globalThis` is the new standard way of accessing global this. Existing simple ways depend on the platform:
+- Global variable window: is the classic way of referring to the global object. But it doesn’t work in Node.js and in Web Workers.
+- Global variable self: is available in Web Workers and browsers in general. But it isn’t supported by Node.js. Some people take self appearing in code, as a sign that that code works in both Web Workers and normal browser settings.
+- Global variable global: is only available in Node.js.
+
+ECMAScript introduced several features that make it easier to avoid the global object – for example:
+- `const`, `let`, and `class` declarations don’t create global object properties when used in global scope.
+- Each ECMAScript module has its own local scope.
+
+There are relatively few use cases for globalThis – for example:
+- Polyfills and shims that provide new features on JavaScript engines.
+- Feature detection, to find out what features a JavaScript engine supports.
+
+---
+
+**[What’s new in ES2019](https://blog.tildeloop.com/posts/javascript-what%E2%80%99s-new-in-es2019)**
+
+1. `Array.flat()`
+2. `Array.flatMap()`
+3. `String.trimStart() and String.trimEnd()`
+4. `Object.fromEntries`
+5. `Optional Catch Binding`
+6. `Symbol.description`
+7. `Function.toString()`
+8. `JSON.parse() improvements`
+
+---
+
