--- a/阅读笔记/HTTP权威指南/第四章：连接管理.md
+++ b/阅读笔记/HTTP权威指南/第四章：连接管理.md
@@ -29,4 +29,19 @@
     9. 套接字 API 允许用户创建 TCP 的端点数据结构，将这些端点与远程服务器的 TCP 端点进行连接，并对数据流进行读写。
     10. TCP API 隐藏了所有底层网络协议的握手细节，以及 TCP 数据流与 IP 分组之间的分段和重装细节。
 
-2. 对 TCP 性能的考虑
+2. 对 TCP 性能的考虑：HTTP 位于 TCP 的上层，HTTP 事务的性能在很大程度上取决于底层 TCP 通道的性能。
+    1. HTTP 事务的时延的主要原因：这些 TCP 网络时延的大小取决于硬件速度、网络和服务器负载，请求和响应报文的尺寸，以及客户端和服务器之间的距离。TCP 协议的技术复杂性也会对时延产生巨大的影响。
+        1. 客户端首先需要根据 URI 确定服务器的 IP 地址和端口号。如果最近没有对 URI 中的主机名进行访问，通过 DNS 解析系统将 URI 中的主机名转换成一个 IP 地址可能要花费数十秒的时间。
+        2. 客户端会向服务器发送一条 TCP 连接请求，并等待服务器回送一个请求接受应答。每条新的 TCP 连接都会有连接建立时延。
+        3. 连接建立起来之后，客户端会通过新建立的 TCP 管道来发送 HTTP 请求，数据到达时，服务器会从 TCP 连接中读取请求报文，并对请求进行处理。因特网传输请求报文以及服务器处理请求报文都需要时间。
+        4. 服务器回送 HTTP 响应，需要花费时间。
+    2. 性能聚焦区域：其他常见 TCP 相关时延
+        1. TCP 连接建立握手
+        2. TCP 慢启动拥塞控制
+        3. 数据聚集的 Nagle 算法
+        4. 用于捎带确认的 TCP 延迟确认算法
+        5. TIME_WAIT 时延和端口耗尽
+    3. TCP 连接的握手时延：建立一条新的 TCP 连接时，甚至是在发送任意数据之前，TCP 软件之间会交换一系列的 IP 分组，对连接的有关参数进行沟通。如果连接只用于传送少量数据，这些交换过程就会严重降低 HTTP 的性能。
+    4. TCP连接握手需要经过以下几个步骤：
+       1. 请求新的TCP连接时，客户端要向服务器发送一个小的TCP分组。这个分组中设置了一个特殊的SYN标记，说明这是一个连接请求。
+       2. 
