--- a/阅读笔记/HTTP权威指南/第四章：连接管理.md
+++ b/阅读笔记/HTTP权威指南/第四章：连接管理.md
@@ -42,6 +42,17 @@
         4. 用于捎带确认的 TCP 延迟确认算法
         5. TIME_WAIT 时延和端口耗尽
     3. TCP 连接的握手时延：建立一条新的 TCP 连接时，甚至是在发送任意数据之前，TCP 软件之间会交换一系列的 IP 分组，对连接的有关参数进行沟通。如果连接只用于传送少量数据，这些交换过程就会严重降低 HTTP 的性能。
-    4. TCP连接握手需要经过以下几个步骤：
-       1. 请求新的TCP连接时，客户端要向服务器发送一个小的TCP分组。这个分组中设置了一个特殊的SYN标记，说明这是一个连接请求。
-       2. 
+    4. TCP 连接握手需要经过以下几个步骤：
+        1. 请求新的 TCP 连接时，客户端要向服务器发送一个小的 TCP 分组。这个分组中设置了一个特殊的 SYN 标记，说明这是一个连接请求。
+        2. 如果服务器接受了请求，就会对一些连接参数进行计算，并向客户端回送一个 TCP 分组，这个分组中的 SYN 和 ACK 标记都被置位，说明连接请求已经被接受。
+        3. 最后，客户端向服务器回送一条确认信息，通知它连接已成功建立。现代的 TCP 栈都允许客户端在这个确认分组中发送数据。
+    5. 通常 HTTP 事务都不会交换太多数据，此时，SYN/SYN+ACK 握手会产生一个可测量的时延。TCP 连接的 ACK 分组通常都足够大，可以承载整个 HTTP 请求报文，而且很多 HTTP 服务器响应报文都可以放入一个 IP 分组中去。
+    6. 小的 HTTP 事务可能会在 TCP 建立上花费 50%或更多的时间。通过重用现存连接，可以减小这种 TCP 建立时延所造成的影响。
+    7. 由于因特网自身无法确保可靠的分组传输，所以 TCP 实现了自己的确认机制来确保数据的成功传输。
+    8. 每个 TCP 段都有一个序列号和数据完整性校验和。每个段的接收者收到完好的段时，都会向发送者回送小的确认分组。如果发送者没有在指定的窗口时间内收到确认信息，发送者就会认为分组已经被破坏或损毁，并重发数据。
+    9. 由于确认报文很小，所以 TCP 允许在发往相同方向的输出数据分组中对其进行“捎带”。TCP 将返回的确认信息与输出的数据分组结合在一起，可以更有效地利用网络。
+    10. 延迟确认算法：为了增加确认报文找到同向传输数据分组的可能性，很多 TCP 栈都实现了一种“延迟确认”算法。延迟确认算法会在一个特定的窗口时间内（通常是 100 ～ 200 毫秒）将输出确认存放在缓冲区中，以寻找能够捎带它的输出数据分组。如果在那段时间内没有输出数据分组，就将确认信息放在单独的分组中传送。
+    11. TCP 慢启动：TCP 数据传输的性能还取决于 TCP 连接的使用期。TCP 连接会随着时间进行自我“调协”，起初会限制连接的最大速度，如果数据成功传输，会随着时间的推移提高传输的速度。这种调协被称为 TCP 慢启动，用于防止因特网的突然过载和拥塞。
+    12. 打开拥塞窗口：TCP 慢启动限制了一个 TCP 端点在任意时刻可以传输的分组数。如果某个 HTTP 事务有大量数据要发送，是不能一次将所有分组都发送出去的。必须发送一个分组，等待确认，然后可以发送两个分组，每个分组都必须被确认，这样就可以发送四个分组了，以此类推。这种方式称为“打开拥塞窗口”。
+    13. 由于存在这种拥塞控制特性，所以新连接的传输速度会比已经交换过一定量数据的、“已调谐”连接慢一些。由于已调协连接更快一些，所以 HTTP 中有一些可以重用现存连接的工具。
+    14. Nagle 算法与 TCP_NODELAY：
