--- a/日志/2019/0812-0818.md
+++ b/日志/2019/0812-0818.md
@@ -152,3 +152,64 @@ There are relatively few use cases for globalThis – for example:
 
 ---
 
+**[How to Gracefully Use Environment Variables in a React Native App](https://levelup.gitconnected.com/how-to-gracefully-use-environment-variables-in-a-react-native-app-7f1600446116)**
+
+---
+**[Native lazy-loading for the web](https://web.dev/native-lazy-loading?mc_cid=8d9fe6cbf8&mc_eid=dc1f8a9925)**
+
+The loading attribute
+
+Today, Chrome already loads images at different priorities depending on where they're located with respect to the device viewport. Images below the viewport are loaded with a lower priority, but they're still fetched as soon as possible.
+
+In Chrome 76, you can use the loading attribute to completely defer the loading of offscreen images and iframes that can be reached by scrolling:
+
+```html
+<img src="image.png" loading="lazy" alt="…" width="200" height="200">
+<iframe src="https://example.com" loading="lazy"></iframe>
+```
+
+Here are the supported values for the loading attribute:
+- auto: Default lazy-loading behavior of the browser, which is the same as not including the attribute.
+- lazy: Defer loading of the resource until it reaches a calculated distance from the viewport.
+- eager: Load the resource immediately, regardless of where it's located on the page.
+
+How do I handle browsers that don't yet support native lazy-loading?
+
+Create a polyfill or use a third-party library to lazy-load images on your site. The loading property can be used to detect if the feature is supported in the browser:
+
+```javascript
+if ('loading' in HTMLImageElement.prototype) {
+  // supported in browser
+} else {
+  // fetch polyfill/third-party library
+}
+```
+
+---
+
+**[IntersectionObserver’s Coming into View](https://developers.google.com/web/updates/2016/04/intersectionobserver)**
+
+How to create an IntersectionObserver:
+
+```javascript
+var io = new IntersectionObserver(
+  entries => {
+    console.log(entries);
+  },
+  {
+    /* Using default options. Details below */
+  }
+);
+// Start observing an element
+io.observe(element);
+
+// Stop observing an element
+// io.unobserve(element);
+
+// Disable entire IntersectionObserver
+// io.disconnect();
+```
+
+Using the default options for IntersectionObserver, your callback will be called both when the element comes partially into view and when it completely leaves the viewport.
+
+If you need to observe multiple elements, it is both possible and advised to observe multiple elements using the same IntersectionObserver instance by calling observe() multiple times.
