--- a/日志/2019/0812-0818.md
+++ b/日志/2019/0812-0818.md
@@ -213,3 +213,29 @@ io.observe(element);
 Using the default options for IntersectionObserver, your callback will be called both when the element comes partially into view and when it completely leaves the viewport.
 
 If you need to observe multiple elements, it is both possible and advised to observe multiple elements using the same IntersectionObserver instance by calling observe() multiple times.
+
+---
+
+**[Handling and dispatching events with Node.js](https://blog.logrocket.com/handling-and-dispatching-events-with-node-js/)**
+
+**Modules in Node.js**
+
+| Module      | Description                                     |
+| :---------- | :---------------------------------------------- |
+| http        | Makes Node.js act like an HTTP server           |
+| url         | Parses and resolves URL strings                 |
+| querystring | Handles URL query strings                       |
+| path        | Handles file paths                              |
+| fs          | Handles the file system                         |
+| os          | Provides information about the operating system |
+
+**The events module**
+| EventEmitter methods             | Description                                                                                                                                   |
+| :------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------- |
+| addListener(event, listener)     | Adds a listener to the end of the listeners array for the specified event. No checks are made to see if the listener has already been added.  |
+| on(event, listener)              | It can also be called as an alias of emitter.addListener()                                                                                    |
+| once(event, listener)            | Adds a one-time listener for the event. This listener is invoked only the next time the event is fired, after which it is removed.            |
+| emit(event, [arg1], [arg2], […]) | Raise the specified events with the supplied arguments.                                                                                       |
+| removeListener(event, listener)  | Removes a listener from the listener array for the specified event. Caution: changes array indices in the listener array behind the listener. |
+| removeAllListeners([event])      | Removes all listeners, or those of the specified event.                                                                                       |
+
