--- a/阅读笔记/HTTP权威指南/第四章：连接管理.md
+++ b/阅读笔记/HTTP权威指南/第四章：连接管理.md
@@ -113,3 +113,12 @@
         4. HTTP 客户端不应该用管道化的方式发送会产生副作用的请求（比如 POST）。由于无法安全地重试 POST 这样的非幂等请求，所以出错时，就存在某些方法永远不会被执行的风险。
 
 7. 关闭连接的奥秘
+    1. 任意解除连接：所有 HTTP 客户端、服务器或代理都可以在任意时刻关闭一条 TCP 传输连接。通常会在一条报文结束时关闭连接，但出错的时候，也可能在首部行的中间，或其他地方关闭连接。但是，服务器永远都无法确定在它关闭“空闲”连接的那一刻，在线路那一头的客户端有没有数据要发送。如果出现这种情况，客户端就会在写入半截请求报文时发现出现了连接错误。
+    2. HTTP 应用程序要做好正确处理非预期关闭的准备。如果在客户端执行事务的过程中，传输连接关闭了，那么，除非事务处理会带来一些副作用，否则客户端就应该重新打开连接，并重试一次。对管道化连接来说，这种情况更加严重一些。客户端可以将大量请求放入队列中排队，但源端服务器可以关闭连接，这样就会留下大量未处理的请求，需要重新调度。
+    3. 幂等：如果一个事务，不管是执行一次还是很多次，得到的结果都是相同的，这个事务就是幂等的。实现者们可以认为 GET、HEAD、PUT、DELETE、TRACE 和 OPTIONS 方法都共享这一特性。
+    4. 客户端不应该以管道化方式传送非幂等请求，否则，传输连接的过早终止就会造成一些不确定的后果。
+    5. TCP 连接是双向的。TCP 连接的每一端都有一个输入队列和一个输出队列，用于数据的读或写。放入一端输出队列中的数据最终会出现在另一端的输入队列中。
+    6. 完全关闭与版关闭：应用程序可以关闭 TCP 输入和输出信道中的任意一个，或者将两者都关闭了。套接字调用 close()会将 TCP 连接的输入和输出信道都关闭了，称作“完全关闭”。用套接字调用 shutdown()单独关闭输入或者输出信道，称为“半关闭”。
+    7. 关闭连接的输出信道总是很安全的。连接另一端的对等实体会在其缓冲区中读出所有数据之后收到一条通知，说明流结束了，这样他就直到你将连接关闭了。
+    8. 关闭连接的输入信道比较危险，除非你知道另一端不打算再发送其他数据了。
+    9. 实现正常关闭的应用程序首先应该关闭它们的输出信道，然后等待连接另一端的对等实体关闭它的输出信道。当两端都告诉对方它们不会再发送任何数据之后，连接就会被完全关闭，而不会有重置的危险。
