--- a/阅读笔记/HTTP权威指南/第六章：代理.md
+++ b/阅读笔记/HTTP权威指南/第六章：代理.md
@@ -1,3 +1,15 @@
 # HTTP 权威指南
 
 ## 第 6 章 代理
+
+1. Web 上的代理服务器是代表客户端完成事务处理的中间人。HTTP的代理服务器既是服务器又是客户端。
+
+2. 公共代理：大多数代理都是公共的共享代理。集中式代理的成本效率更高，更容易管理。某些代理应用，例如高速缓存代理服务器，会利用用户的共同的请求，这样的话，汇入同一个代理服务器的用户越多，它就越有用。
+
+3. 私有代理：带个客户端专用的代理。
+
+4. 代理与网关的对比：代理连接的是两个或多个使用相同协议的应用程序，而网关连接的则是两个或多个使用不同协议的端点。网关扮演的是“协议转换器”的角色，即使客户端和服务器使用的是不同的协议，客户端也可以通过它完成与服务器之间的事务处理。
+
+5. 为什么使用代理：代理可以改善安全性，提高性能，节省费用。代理服务器可以看到并接触所有流过的HTTP流量，所以代理可以监控流量并对其进行修改。例如儿童过滤器、文档访问控制、安全防火墙、Web缓存、反向代理、内容路由器、转码器、匿名访问等。
+
+6. 代理服务器的部署：
