--- a/阅读笔记/HTTP权威指南/第六章：代理.md
+++ b/阅读笔记/HTTP权威指南/第六章：代理.md
@@ -2,7 +2,7 @@
 
 ## 第 6 章 代理
 
-1. Web 上的代理服务器是代表客户端完成事务处理的中间人。HTTP的代理服务器既是服务器又是客户端。
+1. Web 上的代理服务器是代表客户端完成事务处理的中间人。HTTP 的代理服务器既是服务器又是客户端。
 
 2. 公共代理：大多数代理都是公共的共享代理。集中式代理的成本效率更高，更容易管理。某些代理应用，例如高速缓存代理服务器，会利用用户的共同的请求，这样的话，汇入同一个代理服务器的用户越多，它就越有用。
 
@@ -10,6 +10,36 @@
 
 4. 代理与网关的对比：代理连接的是两个或多个使用相同协议的应用程序，而网关连接的则是两个或多个使用不同协议的端点。网关扮演的是“协议转换器”的角色，即使客户端和服务器使用的是不同的协议，客户端也可以通过它完成与服务器之间的事务处理。
 
-5. 为什么使用代理：代理可以改善安全性，提高性能，节省费用。代理服务器可以看到并接触所有流过的HTTP流量，所以代理可以监控流量并对其进行修改。例如儿童过滤器、文档访问控制、安全防火墙、Web缓存、反向代理、内容路由器、转码器、匿名访问等。
+5. 为什么使用代理：代理可以改善安全性，提高性能，节省费用。代理服务器可以看到并接触所有流过的 HTTP 流量，所以代理可以监控流量并对其进行修改。例如儿童过滤器、文档访问控制、安全防火墙、Web 缓存、反向代理、内容路由器、转码器、匿名访问等。
 
 6. 代理服务器的部署：
+
+    1. 出口代理：将代理固定在本地网络的出口点，以便控制本地网络与大型因特网之间的流量。
+    2. 访问（入口）代理：代理常被放在 ISP 访问点上，用以处理来自客户的聚合请求。ISP 使用缓存代理来存储常用文档的副本，以提高用户的下载速度，降低因特网带宽耗费。
+    3. 反向代理：部署在网络边缘。可以处理所有传递给服务器的请求，并只在必要时向服务器请求资源。
+    4. 网络交换代理：可以将具有足够处理能力的代理放在网络之间的因特网对等交换点上，通过缓存来减轻因特网节点的拥塞，并对流量进行监控。
+
+7. 动态选择父代理：
+
+    1. 负载均衡：子代理可能会根据当前父代理上的工作负载级别来决定如何选择一个父代理，以均衡负载。
+    2. 地理位置附近的路由：子代理可能会选择负责原始服务器所在物理区域的父代理。
+    3. 协议/类型路由：子代理可能会根据 URI 将报文转发到不同的父代理和原始服务器上去。某些特定类型的 URI 可能要通过一些特殊的代理服务器转发请求，以便进行特殊的协议处理。
+    4. 基于订购的路由：如果发布者为高性能服务额外付费了，它们的 URI 就会被转发到大型缓存或压缩引擎上去，以提高性能。
+
+8. 代理是如何获取流量的：
+
+    1. 修改客户端：很多客户端支持手工和自动配置代理，如果将客户端配置为使用代理服务器，客户端就会将 HTTP 请求有意地直接发送给代理，而不是原始服务器。
+    2. 修改网络：网络基础设施可以通过若干种技术手段，在客户端不知道，或没有参与的情况下，拦截网络流量并将其导入代理。这种代理被称为拦截代理。
+    3. 修改 DNS 的命名空间：通过修改 DNS 名称列表，将流量导入代理服务器。
+    4. 修改 Web 服务器：重定向。
+
+9. 追踪报文：将请求从客户端传送到服务器的路径上，经过两个或多个代理是很常见的。比如，处于安全和节省费用的考虑，很多公司都会用缓存代理服务器来访问因特网，而且很多大型 ISP 都会用代理缓存来提高性能并实现各种特性。
+
+    1. Via 首部：Via 首部字段列出了与报文途经的每个中间节点有关的信息。报文每经过一个节点，都必须将这个中间节点添加到 Via 列表的末尾。Via 首部字段用于记录报文的转发，诊断报文循环，标识请求/响应链上所有发送者的协议能力。代理可以用 Via 首部来检测网络中的路由循环。
+    2. TRACE 方法：通过 HTTP/1.1 的 TRACE 方法，用户可以跟踪经代理链传输的请求报文，观察报文经过了哪些代理，以及每个代理是如何对请求报文进行修改的。
+
+10. 代理认证：代理可以作为访问控制设备使用。HTTP 定义了一种名为代理认证的机制，这种机制可以阻止对内容的请求，直到用户向代理提供了有效的访问权限证书为止。
+    1. 对受限内容的请求到达一台代理服务器时，代理服务器可以返回一个要求使用访问证书的 407 状态码，以及一个用于描述怎样提供这些证书的 Proxy-Authenticate 首部字段。
+    2. 客户端收到 407 响应时，会尝试着从本地数据库中，或者通过提示用户来搜集所需要的证书。
+    3. 只要获得了证书，客户端就会重新发送请求，在 Proxy-Authorization 首部字段中提供所要求的证书。
+    4. 如果证书有效，代理就会将原始请求沿着传输链路向下传送。否则就发送另一条 407 应答。
