--- a/阅读笔记/HTTP权威指南/第七章：缓存.md
+++ b/阅读笔记/HTTP权威指南/第七章：缓存.md
@@ -2,4 +2,31 @@
 
 ## 第 7 章 缓存
 
+1. 使用缓存有以下优点：
 
+    1. 缓存减少了冗余的数据传输，节省了网络费用。
+    2. 缓存缓解了网络瓶颈的问题。不需要更多的宽带就能够更快地加载页面。
+    3. 缓存降低了对原始服务器的要求。服务器可以更快地响应，避免过载的出现。
+    4. 缓存降低了距离时延，因为从较远的地方加载页面会更慢一些。
+
+2. 冗余的数据传输：有很多客户端访问一个流行的原始服务器页面时，服务器会多次传输同一份文档，每次传送给一个客户端。一些相同的字节会在网络中一遍遍地传输。这些冗余的数据传输会耗尽昂贵的网络带宽，降低传输速度，加重服务器的负载。有了缓存，就可以保留第一条服务器响应的副本，后继请求就可以由缓存的副本来应对了。这样可以减少流入/流出原始服务器的重复流量。
+
+3. 缓存可以缓解网络的瓶颈问题。很多网络为本地网络客户端提供的带宽比为远程服务器提供的带宽要宽。客户端会以路径上最慢的网速访问服务器。如果客户端从一个快速局域网的缓存中得到了一份副本，那么缓存就可以提高性能。
+
+4. 瞬间拥塞：缓存在破坏瞬间拥塞时非常重要。很多人同一时间访问一个 Web 文档时，就会出现瞬间拥塞。由此造成的过多流量峰值可能会使网络和 Web 服务器产生灾难性的崩溃。
+
+5. 距离时延：每台网络路由器都会增加因特网流量的时延，即使客户端和服务器之间没有太多的路由器，光速自身也会造成显著的时延。
+
+6. 命中和未命中：可以用已有的副本为某些到达缓存的请求提供服务，称为缓存命中。没有副本可用而被转发给原始服务器称为缓存未命中。
+
+7. 再验证：原始服务器的内容可能会发生变化，缓存要不时对其进行检测，看看它们保存的副本是否仍是服务器上最新的副本。缓存对缓存的副本进行再验证时，会向原始服务器发送一个小的再验证请求。如果内容没有变化，服务器会以一个小的 304Not Modified 进行响应。
+
+8. HTTP 提供的验证工具：If-Modified-Since 首部。将这个首部添加到 GET 请求中去，就可以告诉服务器，只有在缓存了对象的副本之后，又对其进行了修改的情况下，才发送此对象。
+
+9. 命中率：由缓存提供服务的请求所占的比例被称为缓存命中率。缓存的管理者希望缓存命中率接近 100%，而实际得到的命中率则与缓存的大小、缓存用户兴趣点的相似性、缓存数据的变化或个性化频率，以及如何配置缓存有关。
+
+10. 字节命中率：由于文档并不全是同一尺寸的，所以文档命中率并不能说明一切。有些大型对象被访问的次数可能较少，但由于尺寸的原因，对整个数据流量的贡献却更大。因此，有些人更愿意使用字节命中率作为度量值。
+
+11. 区分命中和未命中的情况：客户端有一种方法可以判断响应是否来自缓存，就是使用 Date 首部。将响应中 Date 首部的值与当前时间进行比较，如果响应中的日期值比较早，客户端通常就可以认为这是一条缓存的响应。客户端也可以通过 Age 首部来检测缓存的响应，通过这个首部可以分辨出这条响应的使用期。
+
+12. 缓存的拓扑结构：缓存可以是单个用户专用的，也可以是数千名用户共享的。专用缓存被称为私有缓存。共享的缓存被称为公有缓存。
