--- a/阅读笔记/HTTP权威指南/第七章：缓存.md
+++ b/阅读笔记/HTTP权威指南/第七章：缓存.md
@@ -30,3 +30,45 @@
 11. 区分命中和未命中的情况：客户端有一种方法可以判断响应是否来自缓存，就是使用 Date 首部。将响应中 Date 首部的值与当前时间进行比较，如果响应中的日期值比较早，客户端通常就可以认为这是一条缓存的响应。客户端也可以通过 Age 首部来检测缓存的响应，通过这个首部可以分辨出这条响应的使用期。
 
 12. 缓存的拓扑结构：缓存可以是单个用户专用的，也可以是数千名用户共享的。专用缓存被称为私有缓存。共享的缓存被称为公有缓存。
+
+13. 代理缓存的层次结构：实现层次化的缓存是很有意义的，在这种结构中，在较小缓存中未命中的请求会被导向较大的父缓存，由它来为剩下的那些“提炼过的”流量服务。
+
+14. 网状缓存、内容路由及对等缓存：有些网络结构会构建复杂的网状缓存，而不是简单的缓存层次结构。网状缓存中的代理缓存之间会以更加复杂的方式进行对话，做出动态的缓存通信决策，决定与哪个父缓存进行对话，或者决定彻底绕开缓存，直接连接原始服务器。这种代理缓存会决定选择何种路由对内容进行访问、管理和传送，因此可将其称为内容路由器。
+
+    1. 网状缓存中为内容路由设计的缓存要完成下列所有功能：
+        1. 根据 URL 在父缓存或原始服务器之间进行动态选择
+        2. 根据 URL 动态地选择一个特定的父缓存
+        3. 前往父缓存之前，在本地缓存中搜索已缓存的副本
+        4. 允许其他缓存对其缓存的部分内容进行访问，但不允许因特网流量通过它们的缓存
+    2. 缓存之间这些更为复杂的关系允许不同的组织互为对等实体，将他们的缓存连接起来以实现共赢。提供可选的对等支持的缓存被称为兄弟缓存。HTTP 并不支持兄弟缓存。
+
+15. 缓存的处理步骤：
+
+    1. 接收：缓存从网络请求中读取抵达的请求报文
+    2. 解析：缓存对报文进行解析，提取出 URL 和各种首部
+    3. 查询：缓存查看是否有本地副本可用，如果没有，就获取一份副本
+    4. 新鲜度检测：缓存查看已缓存副本是否足够新鲜，如果不是，就询问服务器是否有任何更新
+    5. 创建响应：缓存会用新的首部和已缓存的主体来构建一条响应报文
+    6. 发送：缓存通过网络将响应发回给客户端
+    7. 日志：缓存可选地创建一个日志文件条目来描述这个事务
+
+16. HTTP 有一些简单的机制可以在不要求服务器记住有哪些缓存拥有其文档副本的情况下，保持已缓存数据与服务器数据之间充分一致。HTTP 将这些简单的机制称为文档过期和服务器再验证。
+
+17. 文档过期：通过特殊的 HTTP Cache-Control 首部和 Expires 首部，HTTP 让原始服务器向每个文档附加了一个“过期时间”。这些首部说明了在多长时间内可以将这些内容视为新鲜的。在缓存文档过期之前，缓存可以以任意频率使用这些副本，而无需与服务器联系，除非客户端请求中包含有阻止提供已缓存或未验证资源的首部。
+
+18. Expires 首部使用的是绝对日期，Cache-Control 使用的是相对日期，所以更倾向于使用比较新的 Cache-Control 首部。
+
+19. 服务器再验证：缓存需要询问原始服务器文档是否发生了变化
+
+    1. 如果再验证显示内容发生了变化，缓存会获取一份新的文档副本，并将其存储在旧文档的位置上，然后将文档发送给客户端。
+    2. 如果再验证显示内容没有发生变化，缓存只需要获取新的首部，包括一个新的过期时间，并对缓存中的首部进行更新就行了。
+
+20. 缓存并不一定要为每条请求验证文档的有效性，只有在文档过期时它才需要与服务器进行再验证。这样不会提供陈旧的内容，还可以节省服务器的流量，并拥有更好的用户响应时间。
+
+21. HTTP 协议要求行为正确的缓存返回下列内容之一：
+    1. “足够新鲜”的已缓存副本
+    2. 与服务器进行过再验证，确认其仍然新鲜的已缓存副本
+    3. 如果需要与之进行再验证的原始服务器出故障了，就返回一条错误报文
+    4. 附有警告信息说明内容可能不正确的已缓存副本
+
+22. 用条件方法进行再验证：
