--- a/阅读笔记/HTTP权威指南/第七章：缓存.md
+++ b/阅读笔记/HTTP权威指南/第七章：缓存.md
@@ -66,9 +66,54 @@
 20. 缓存并不一定要为每条请求验证文档的有效性，只有在文档过期时它才需要与服务器进行再验证。这样不会提供陈旧的内容，还可以节省服务器的流量，并拥有更好的用户响应时间。
 
 21. HTTP 协议要求行为正确的缓存返回下列内容之一：
+
     1. “足够新鲜”的已缓存副本
     2. 与服务器进行过再验证，确认其仍然新鲜的已缓存副本
     3. 如果需要与之进行再验证的原始服务器出故障了，就返回一条错误报文
     4. 附有警告信息说明内容可能不正确的已缓存副本
 
-22. 用条件方法进行再验证：
+22. 用条件方法进行再验证：HTTP 的条件方法可以高效地实现再验证。HTTP 允许缓存向原始服务器发送一个“条件 GET”，请求服务器只有在文档与缓存中现有的副本不同时，才回送对象主体。
+
+23. HTTP 定义了 5 个条件请求首部。对缓存再验证来说最有用的 2 个首部是 If-Modified-Since 和 If-None-Match。所有的条件首部都以前缀"If-"开头。
+    |首部|描述|
+    |:-|:-|
+    |If-Modified-Since:date|如果从指定日期之后文档被修改过了，就执行请求的方法。可以与 Last-Modified 服务器响应首部配合使用，只有在内容被修改后与已缓存版本有所不同的时候才去获取内容|
+    |If-None-Match:tags|服务器可以为文档提供特殊的标签，而不是将其与最近修改日期相匹配，这些标签就像序列号一样。如果已缓存标签与服务器文档中的标签有所不同，If-None-Match 首部就会执行所请求的方法。配合 Etag 响应首部|
+
+24. 强弱验证器：有时服务器希望对文档进行一些非实质性或不重要的修改时，不要使所有的已缓存副本都失效。HTTP/1.1 支持“弱验证器”，如果只对内容进行了少量修改，就允许服务器声明那是“足够好”的等价体。只要内容发生了变化，强验证器就会发生变化。弱验证器允许对一些内容进行修改，但内容的主要含义发生变化时，通常它还是会变化的。有些操作不能用弱验证器来实现，所以，服务器会用前缀"W/"来标识弱验证器。
+
+    ```
+    ETag: W/"2.6"
+    If-None-Match: W/"v2.6"
+    ```
+
+25. 控制缓存的能力：服务器可以通过 HTTP 定义的几种方式来指定在文档过期之前可以将其缓存多长时间。按照优先级递减的顺序，服务器可以：
+
+    1. 附加一个 Cache-Control: no-store 首部到响应中去
+    2. 附加一个 Cache-Control: no-cache 首部
+    3. 附加一个 Cache-Control: must-revalidate 首部
+    4. 附加一个 Cache-Control: max-age 首部
+    5. 附加一个 Expires 日期首部
+    6. 不附加过期信息，让缓存确定自己的过期日期
+
+26. no-store 首部和 no-cache 首部可以防止缓存提供未经证实的已缓存对象。标记 no-store 的响应会禁止缓存对响应进行复制。缓存通常会像非缓存代理服务器一样，向客户端转发一条 no-store 响应，然后删除对象。标识为 no-cache 的响应实际上是可以存储在本地缓存区中的。只是在与原始服务器进行新鲜度再验证之前，缓存不能将其提供给客户端使用。
+
+27. max-age 响应首部表示的是从服务器将文档传送来之时起，可以认为此文档处于新鲜状态的秒数。服务器可以请求缓存不要缓存文档，或者将最大使用期设置为零。
+
+28. Expires 响应首部，它指定的是实际的过期日期而不是秒数。HTTP 设计者后来认为，由于很多服务器的时钟都不同步，或者不正确，所以绝对日期不靠谱，不推荐使用 Expires，而是使用相对时间 max-age。
+
+29. must-revalidate 响应首部。在实践中可以配置缓存，使其提供一些陈旧（过期）的对象，以提高性能。如果原始服务器希望缓存严格遵守过期信息，可以在原始响应中附加一个 Cache-Control: must-revalidate 首部。该首部告诉缓存，在事先没有根原始服务器进行再验证的情况下，不能提供这个对象的陈旧副本。缓存仍然可以随意提供新鲜的副本。
+
+30. 试探性过期：如果响应中没有 Cache-Control: max-age 首部，也没有 Expires 首部，缓存可以计算出一个试探性最大使用期。可以使用任意算法，但如果得到的最大使用期大于 24 小时，就应该向响应首部添加一个“试探性过期警告”首部。
+
+31. 客户端的新鲜度限制：客户端可以用 Cache-Control 请求首部来强化或放松对过期时间的限制。有些应用程序对文档的新鲜度要求很高，对这些应用程序来说，客户端可以用 Cache-Control 首部使过期时间更严格。另一方面，作为提高性能可靠性或开支的一种折衷方式，客户端可能会放松新鲜度要求。
+    |指令|目的|
+    |:-|:-|
+    |Cache-Control: max-stale=s|缓存可以随意提供过期的文件，如果指定了参数 s，在这段时间内，文档就不能过期，这条指令放松了缓存的规则|
+    |Cache-Control: min-fresh=s|至少在未来 s 秒内文档要保持新鲜。使缓存规则更加严格|
+    |Cache-Control: max-age=s|缓存无法返回缓存时间长于 s 秒的文档。这条指令会使缓存规则更加严格，除非同时还发送了 max-stale 指令，在这种情况下，使用期可能会超过其过期时间|
+    |Cache-Control: no-cache|除非资源进行了再验证，否则这个客户端不会接受已缓存的资源|
+    |Cache-Control: no-store|缓存应该尽快从存储器中删除文档的所有痕迹|
+    |Cache-Control: only-if-cached|只有当缓存中有副本存在时，客户端才会获取一份副本|
+
+32. 使用期和新鲜生存期：为了分辨已缓存文档是否足够新鲜，缓存只需要计算两个值，已缓存副本的使用期和已缓存副本的新鲜生存期。如果已缓存副本的时长小于新鲜生存期，就说明副本足够新鲜，可以使用。文档的使用期就是自从服务器将其发送出来或者最后一次被服务器再验证之后的总时间。文档的新鲜生存期表明，已缓存副本在经过多长时间之后，就会因为新鲜度不足而无法再向客户端提供了。新鲜生存期考虑了文档的过期时间，以及客户端可能请求的任何新鲜度覆盖范围。
