--- a/阅读笔记/HTTP权威指南/第八章：集成点：网关、隧道及中继.md
+++ b/阅读笔记/HTTP权威指南/第八章：集成点：网关、隧道及中继.md
@@ -1,3 +1,32 @@
 # HTTP 权威指南
 
 ## 第 8 章 集成点：网关、隧道及中继
+
+1. 网关：网关可以作为某种翻译器使用，它抽象出了一种能够到达资源的方法。网关是资源和应用程序之间的粘合剂。应用程序可以请求网关来处理某条请求，网关可以提供一条响应。
+
+    1. 服务器端网关通过 HTTP 与客户端对话，通过其他协议与服务器通信(HTTP/\*)。
+    2. 客户端网关通过其他协议与客户端对话，通过 HTTP 协议与服务器通信(\*/HTTP)。
+
+2. 协议网关：将 HTTP 流量导向网关时所使用的方式与将流量导向代理的方式相同。最常见的方式是，显式地配置浏览器使用网关，对流量进行透明的拦截，或者将网关配置为反向代理。
+
+3. HTTP/\*（服务器端 Web 网关）：请求流入原始服务器时，服务器端 Web 网关会将客户端 HTTP 请求转换为其他协议。
+
+4. HTTP/HTTPS（服务器端安全网关）：一个组织可以通过网关对所有的输入 Web 请求加密，以提供额外的隐私和安全性保护。
+
+5. HTTPS/HTTP 客户端安全加速器网关：HTTPS/HTTP 网关位于 Web 服务器之前，通常作为不可见的拦截网关或反向代理使用。它们接收安全的 HTTPS 流量，对安全流量进行解密，并向 Web 服务器发送普通的 HTTP 请求。这些网关中通常都包含专用的解密硬件，以比原始服务器有效的多的方式来解密安全流量，以减轻原始服务器的负荷。这些网关在网关和原始服务器之间发送的是未加密的流量。
+
+6. 最常见的网关是应用程序服务器，将目标服务器与网关结合在一个服务器中实现。应用程序服务器是服务器端网关，与客户端通过 HTTP 进行通信，并与服务器端的应用程序相连。
+
+7. 第一个流行的应用程序网关 API 就是通用网关接口（Common Gateway Interface, CGI）。CGI 是一个标准接口集，Web 服务器可以用它来装载程序以响应对特定 URL 的 HTTP 请求，并收集程序的输出数据，将其放在 HTTP 响应中回送。
+
+8. CGI 应用程序是独立于服务器的，所以，几乎可以用任意语言来实现。CGI 的处理对用户来说是不可见的，从客户端的角度来看，就像发起一个普通请求一样，它完全不清楚服务器和 CGI 程序之间的转接过程。
+
+9. Web 隧道：这种方式可以通过 HTTP 应用程序访问使用非 HTTP 协议的应用程序。Web 隧道允许用户通过 HTTP 连接发送非 HTTP 流量，这样就可以在 HTTP 上捎带其他协议数据了。使用 Web 隧道最常见的原因就是要在 HTTP 连接中嵌入非 HTTP 流量，这类流量就可以穿过只允许 Web 流量通过的防火墙了。
+
+10. 用 HTTP 的 CONNECT 方法建立隧道：CONNECT 方法并不是 HTTP/1.1 核心规范的一部分，但却是一种得到广泛应用的扩展。CONNECT 方法请求隧道网关创建一条到达任意目的服务器和端口的 TCP 连接，并对客户端和服务器之间的后继数据进行盲转发。
+    1. 客户端发送一条 CONNECT 请求给隧道网关，请求隧道网关打开一条 TCP 连接。
+    2. 创建 TCP 连接。
+    3. 建立了 TCP 连接之后，网关发送一条 HTTP 200 Connection Established 响应来通知客户端。
+    4. 这时隧道就建立起来了。客户端通过 HTTP 隧道发送的所有数据都会被直接转发给输出 TCP 连接，服务器发送的所有数据都会通过 HTTP 隧道转发给客户端。
+
+11. SSL隧道：通过一条HTTP连接来传输SSL流量，以穿过端口80的HTTP防火墙。
