--- a/日志/2019/0819-0825.md
+++ b/日志/2019/0819-0825.md
@@ -88,4 +88,33 @@ it("Better: When adding new valid product, get successful confirmation", async (
 ```
 
 **Test many input combinations using Property-based testing**
+Property-based testing is a technique that does exactly that: by sending all the possible input combinations to your unit under test it increases the serendipity of finding a bug.
+
+example:
+```javascript
+require('mocha-testcheck').install();
+const {expect} = require('chai');
+const faker = require('faker');
+
+describe('Product service', () => {
+  describe('Adding new', () => {
+    //this will run 100 times with different random properties
+    check.it('Add new product with random yet valid properties, always successful',
+      gen.int, gen.string, (id, name) => {
+        expect(addNewProduct(id, name).status).to.equal('approved');
+      });
+  })
+});
+```
+**If needed, use only short & inline snapshots**
+
+**Avoid global test fixtures and seeds, add data per-test**
+
+**Don’t catch errors, expect them**
+example:
+```javascript
+it.only("When no product name, it throws error 400", async() => {
+  expect(addNewProduct)).to.eventually.throw(AppError).with.property('code', "InvalidInput");
+});
+```
 
