--- a/日志/2019/0819-0825.md
+++ b/日志/2019/0819-0825.md
@@ -1,11 +1,13 @@
 **[JavaScript and Node Testing Best Practices](https://github.com/goldbergyoni/javascript-testing-best-practices)**
 
 **Include 3 parts in each test name**
+
 1. What is being tested? For example, the ProductsService.addNewProduct method
 2. Under what circumstances and scenario? For example, no price is passed to the method
 3. What is the expected result? For example, the new product is not approved
 
-example: 
+example:
+
 ```javascript
 //1. unit under test
 describe('Products Service', function() {
@@ -20,22 +22,27 @@ describe('Products Service', function() {
 ```
 
 **Structure tests by the AAA pattern**
-Structure your tests with 3 well-separated sections Arrange, Act & Assert (AAA). 
+Structure your tests with 3 well-separated sections Arrange, Act & Assert (AAA).
+
 1. 1st A - Arrange: All the setup code to bring the system to the scenario the test aims to simulate. This might include instantiating the unit under test constructor, adding DB records, mocking/stubbing on objects and any other preparation code
 2. 2nd A - Act: Execute the unit under test. Usually 1 line of code
 3. 3rd A - Assert: Ensure that the received value satisfies the expectation. Usually 1 line of code
 
 example:
+
 ```javascript
 describe('Customer classifier', () => {
     test('When customer spent more than 500$, should be classified as premium', () => {
         //Arrange
-        const customerToClassify = {spent:505, joined: new Date(), id:1}
-        const DBStub = sinon.stub(dataAccess, "getCustomer")
-            .reply({id:1, classification: 'regular'});
+        const customerToClassify = { spent: 505, joined: new Date(), id: 1 };
+        const DBStub = sinon
+            .stub(dataAccess, 'getCustomer')
+            .reply({ id: 1, classification: 'regular' });
 
         //Act
-        const receivedClassification = customerClassifier.classifyCustomer(customerToClassify);
+        const receivedClassification = customerClassifier.classifyCustomer(
+            customerToClassify
+        );
 
         //Assert
         expect(receivedClassification).toMatch('premium');
@@ -47,6 +54,7 @@ describe('Customer classifier', () => {
 Coding your tests in a declarative-style allows the reader to get the grab instantly without spending even a single brain-CPU cycle.
 
 example:
+
 ```javascript
 it("When asking for an admin, ensure only ordered admins in results" , ()={
     //assuming we've added here two admins
@@ -61,13 +69,15 @@ it("When asking for an admin, ensure only ordered admins in results" , ()={
 Whenever a public behavior is checked, the private implementation is also implicitly tested and your tests will break only if there is a certain problem.
 
 **Choose the right test doubles: Avoid mocks in favor of stubs and spies**
+
 > 测试双打
 
 example:
+
 ```javascript
-it("When a valid product is about to be deleted, ensure an email is sent", async () => {
+it('When a valid product is about to be deleted, ensure an email is sent', async () => {
     //Assume we already added here a product
-    const spy = sinon.spy(Emailer.prototype, "sendEmail");
+    const spy = sinon.spy(Emailer.prototype, 'sendEmail');
     new ProductService().deletePrice(theProductWeJustAdded);
     //hmmm OK: we deal with internals? Yes, but as a side effect of testing the requirements (sending an email)
 });
@@ -77,9 +87,13 @@ it("When a valid product is about to be deleted, ensure an email is sent", async
 Often production bugs are revealed under some very specific and surprising input — the more realistic the test input is, the greater the chances are to catch bugs early. Use dedicated libraries like Faker to generate pseudo-real data that resembles the variety and form of production data.
 
 example:
+
 ```javascript
-it("Better: When adding new valid product, get successful confirmation", async () => {
-    const addProductResult = addProduct(faker.commerce.productName(), faker.random.number());
+it('Better: When adding new valid product, get successful confirmation', async () => {
+    const addProductResult = addProduct(
+        faker.commerce.productName(),
+        faker.random.number()
+    );
     //Generated random input: {'Sleek Cotton Computer',  85481}
     expect(addProductResult).to.be.true;
     //Test failed, the random input triggered some path we never planned for.
@@ -91,30 +105,109 @@ it("Better: When adding new valid product, get successful confirmation", async (
 Property-based testing is a technique that does exactly that: by sending all the possible input combinations to your unit under test it increases the serendipity of finding a bug.
 
 example:
+
 ```javascript
 require('mocha-testcheck').install();
-const {expect} = require('chai');
+const { expect } = require('chai');
 const faker = require('faker');
 
 describe('Product service', () => {
-  describe('Adding new', () => {
-    //this will run 100 times with different random properties
-    check.it('Add new product with random yet valid properties, always successful',
-      gen.int, gen.string, (id, name) => {
-        expect(addNewProduct(id, name).status).to.equal('approved');
-      });
-  })
+    describe('Adding new', () => {
+        //this will run 100 times with different random properties
+        check.it(
+            'Add new product with random yet valid properties, always successful',
+            gen.int,
+            gen.string,
+            (id, name) => {
+                expect(addNewProduct(id, name).status).to.equal('approved');
+            }
+        );
+    });
 });
 ```
+
 **If needed, use only short & inline snapshots**
 
 **Avoid global test fixtures and seeds, add data per-test**
 
 **Don’t catch errors, expect them**
 example:
+
 ```javascript
 it.only("When no product name, it throws error 400", async() => {
   expect(addNewProduct)).to.eventually.throw(AppError).with.property('code', "InvalidInput");
 });
 ```
+
+---
+
+**[Third-party JavaScript performance](https://web.dev/third-party-javascript)**
+
+Any significant amount of JavaScript can slow down performance. But because third-party JavaScript is usually outside your control, it can bring additional issues.
+
+-   Network: Setting up connections takes time, and sending too many requests to multiple servers causes slowdowns.
+    -   Firing additional network requests
+    -   Pulling in unoptimized images and videos
+    -   Insufficient HTTP caching, which forces frequent fetching of network resources
+    -   Insufficient server compression of resources
+    -   Multiple instances of frameworks and libraries pulled in by different third-party embeds
+-   Rendering: The way third-party JavaScript is loaded matters a lot. If it's done synchronously in the critical rendering path it delays parsing of the rest of the document.
+
+What to do about it:
+
+-   When choosing third-party resources, favor those that send the least amount of code while still giving you the functionality you need.
+-   Use performance budgets for third-party content to keep their cost in check.
+-   Don't use the same functionality from two different vendors. You probably don't need two tag managers or two analytics platforms.
+-   Routinely audit and clean out redundant third-party scripts.
+
+---
+
+**[Identify slow third-party JavaScript](https://web.dev/identify-slow-third-party-javascript)**
+
+---
+
+**[Efficiently load third-party JavaScript](https://web.dev/efficiently-load-third-party-javascript)**
+
+If a third-party script is slowing down your page load, you have two options to improve performance:
+
+-   Remove it if it doesn't add clear value to your site.
+-   Optimize the loading process.
+
+How to optimize the loading process of third-party scripts with the following techniques:
+
+1. Using the async or defer attribute on `<script>` tags
+2. Establishing early connections to required origins
+3. Lazy-loading
+4. Optimizing how you serve third-party scripts
+
+**Using the async or defer attribute on `<script>` tags**
+
+The async and defer attributes tell the browser that it may go on parsing the HTML while loading the script in the background, and then execute the script after it loads. This way, script downloads don't block DOM construction and page rendering. The result is that the user can see the page before all scripts have finished loading.
+
+-   async: `async` scripts will not be executed in the order in which they appear in the HTML. It also means they can interrupt DOM building if they finish downloading while the parser is still at work.
+-   defer: Scripts with the `defer` attribute execute after HTML parsing is completely finished, but before the DOMContentLoaded event. `defer` guarantees scripts will be executed in the order they appear in the HTML and will not block the parser.
+
+> - Use async if it's important to have the script run earlier in the loading process.
+> - Use defer for less critical resources. A video player that's below-the-fold, for example.
+
+**Establish early connections to required origins**
+
+- preconnect: informs the browser that your page intends to establish a connection to another origin, and that you'd like the process to start as soon as possible. When the request for a resource from the pre-connected origin is made, the download starts immediately.
+- dns-prefetch: Establishing a connection involves the DNS lookup and TCP handshake, and for secure origins, TLS negotiations. 
+
+**Lazy-load third-party resources**
+
+Intersection Observer is a browser API that efficiently detects when an element enters or exits the browser's viewport and it can be used to implement this technique. lazysizes is a popular JavaScript library for lazy-loading images and iframes.
+
+**Optimize how you serve third-party scripts**
+
+- Third-party CDN hosting: The benefits of this approach are that you can get started quickly—just copy and paste the URL—and there's no maintenance overhead. The third-party vendor handles server configuration and script updates.
+- Self-host third-party script:
+  - Reduce DNS lookup and round-trip times.
+  - Improve HTTP caching headers.
+  - Take advantage of HTTP/2 server push.
+
+**Use service workers to cache scripts from third-party servers**
+
+---
 
