--- a/日志/2019/0819-0825.md
+++ b/日志/2019/0819-0825.md
@@ -211,3 +211,69 @@ Intersection Observer is a browser API that efficiently detects when an element 
 
 ---
 
+**[5 Interesting Uses of JavaScript Destructuring](https://dmitripavlutin.com/5-interesting-uses-javascript-destructuring/)**
+
+1. Swap variables
+  ```javascript
+  let a = 1;
+  let b = 2;
+
+  [a, b] = [b, a];
+
+  a; // => 2
+  b; // => 1
+  ```
+
+2. Access array item
+  ```javascript
+  const colors = [];
+
+  const [firstColor = 'white'] = colors;
+
+  firstColor; // => 'white'
+
+  // Note the comma on the left side of the destructuring: it means that the first element is ignored. secondColor is assigned with the element at index 1 from the colors array.
+  const colors = [];
+
+  const [, secondColor = 'black'] = colors;
+
+  secondColor; // => 'black'
+  ```
+
+3. Immutable operations
+  ```javascript
+  const numbers = [1, 2, 3];
+
+  const [, ...fooNumbers] = numbers;
+
+  fooNumbers; // => [2, 3]
+  numbers; // => [1, 2, 3]
+
+  const big = {
+    foo: 'value Foo',
+    bar: 'value Bar'
+  };
+
+  const { foo, ...small } = big;
+
+  small; // => { bar: 'value Bar' }
+  big; // => { foo: 'value Foo', bar: 'value Bar' }
+  ```
+
+4. Destructuring iterables
+  ```javascript
+  const str = 'cheese';
+
+  const [firstChar = ''] = str;
+
+  firstChar; // => 'c'
+  ```
+
+5. Destructuring dynamic properties
+  ```javascript
+  const movie = { title: 'Heat' };
+
+  const { title } = movie;
+
+  title; // => 'Heat'
+  ```
