--- a/阅读笔记/HTTP权威指南/第八章：集成点：网关、隧道及中继.md
+++ b/阅读笔记/HTTP权威指南/第八章：集成点：网关、隧道及中继.md
@@ -24,9 +24,20 @@
 9. Web 隧道：这种方式可以通过 HTTP 应用程序访问使用非 HTTP 协议的应用程序。Web 隧道允许用户通过 HTTP 连接发送非 HTTP 流量，这样就可以在 HTTP 上捎带其他协议数据了。使用 Web 隧道最常见的原因就是要在 HTTP 连接中嵌入非 HTTP 流量，这类流量就可以穿过只允许 Web 流量通过的防火墙了。
 
 10. 用 HTTP 的 CONNECT 方法建立隧道：CONNECT 方法并不是 HTTP/1.1 核心规范的一部分，但却是一种得到广泛应用的扩展。CONNECT 方法请求隧道网关创建一条到达任意目的服务器和端口的 TCP 连接，并对客户端和服务器之间的后继数据进行盲转发。
+
     1. 客户端发送一条 CONNECT 请求给隧道网关，请求隧道网关打开一条 TCP 连接。
     2. 创建 TCP 连接。
     3. 建立了 TCP 连接之后，网关发送一条 HTTP 200 Connection Established 响应来通知客户端。
     4. 这时隧道就建立起来了。客户端通过 HTTP 隧道发送的所有数据都会被直接转发给输出 TCP 连接，服务器发送的所有数据都会通过 HTTP 隧道转发给客户端。
 
-11. SSL隧道：通过一条HTTP连接来传输SSL流量，以穿过端口80的HTTP防火墙。
+11. SSL 隧道：通过一条 HTTP 连接来传输 SSL 流量，以穿过端口 80 的 HTTP 防火墙。
+
+12. SSL 隧道与 HTTP/HTTPS 网关的对比：可以像其他协议一样，对 HTTPS 协议进行网关操作，由网关初始化与远端 HTTPS 服务器的 SSL 会话，然后代表客户端执行 HTTPS 事务。响应会由代理接收并解密，然后通过 HTTP 传送给客户端。缺点：
+
+    1. 客户端到网关之间的连接是普通的非安全 HTTP
+    2. 尽管代理是已认证主体，但客户端无法对远端服务器执行 SSL 客户端认证
+    3. 网关要支持完整的 SSL 实现
+
+13. 中继：HTTP 中继是没有完全遵循 HTTP 规范的简单 HTTP 代理。中继负责处理 HTTP 中建立连接的部分，然后对字节进行盲转发。
+
+14. HTTP 很复杂，所以实现基本的代理功能并对流量进行盲转发，而且不执行任何首部和方法逻辑，有时是很有用的。盲中继很容易实现，所以有时会提供简单的过滤，诊断或内容转换功能。
