--- a/日志/2019/0819-0825.md
+++ b/日志/2019/0819-0825.md
@@ -277,3 +277,19 @@ Intersection Observer is a browser API that efficiently detects when an element 
 
   title; // => 'Heat'
   ```
+
+---
+
+**[The Simplest Way to Load CSS Asynchronously](https://www.filamentgroup.com/lab/load-css-simpler/?utm_source=CSS-Weekly&utm_campaign=Issue-373&utm_medium=email)**
+
+1. `media="print"`
+    ```html
+    <link rel="stylesheet" href="/path/to/my.css" media="print" onload="this.media='all'">
+    ```
+    The link's media attribute is set to print. “Print” is a media type that says, “apply this stylesheet’s rules for print-based media,” or in other words, apply them when the user tries to print the page. Admittedly, we want our stylesheet to apply to all media (especially screens) and not just print, but by declaring a media type that doesn’t match the current environment, we can acheive an interesting and useful effect: the browser will load the stylesheet without delaying page rendering, asynchronously! 
+
+2. `rel=preload`
+  Using `<link rel="preload">`, browsers can be informed to prefetch resources without having to execute them, allowing fine-grained control over when and how resources are loaded.
+
+---
+
