--- a/日志/2019/0819-0825.md
+++ b/日志/2019/0819-0825.md
@@ -293,3 +293,30 @@ Intersection Observer is a browser API that efficiently detects when an element 
 
 ---
 
+**Bash中的特殊符号**
+- `#`: 批注符号：这个最常被使用在 script 当中，视为说明，在后的数据均不运行
+- `\`: 跳脱符号：将『特殊字符或通配符』还原成一般字符
+- `|`: 管线 (pipe)：分隔两个管线命令的界定
+- `;`: 连续命令下达分隔符：连续性命令的界定 (注意！与管线命令并不相同)
+- `~`: 用户的家目录
+- `$`: 取用变量前导符：亦即是变量之前需要加的变量取代值
+- `&`: 工作控制 (job control)：将命令变成背景下工作
+- `!`: 逻辑运算意义上的『非』 not 的意思！
+- `/`: 目录符号：路径分隔的符号
+- `>, >>`: 数据流重导向：输出导向，分别是『取代』与『累加』
+- `<, <<`: 数据流重导向：输入导向 (这两个留待下节介绍)
+- `' '`: 单引号，不具有变量置换的功能
+- `" "`: 具有变量置换的功能！
+- 反引号: 两个『 ` 』中间为可以先运行的命令，亦可使用 $( )
+- `( )`: 在中间为子 shell 的起始与结束
+- `{ }`: 在中间为命令区块的组合！
+
+---
+
+`#!/usr/bin/env`在脚本中的作用: 脚本用env启动的原因，是因为脚本解释器在linux中可能被安装于不同的目录，env可以在系统的PATH目录中查找。同时，env还规定一些系统环境量。 而如果直接将解释器路径写死在脚本里，可能在某些系统就会存在找不到解释器的兼容性问题。
+
+`1 > /dev/null 2>&1`语句含义：
+- `1 > /dev/null`: 首先表示标准输出重定向到空设备文件，也就是不输出任何信息到终端，说白了就是不显示任何信息。
+- `2>&1`: 接着，标准错误输出重定向（等同于）标准输出，因为之前标准输出已经重定向到了空设备文件，所以标准错误输出也重定向到空设备文件。
+
+linux中`type`命令的作用：type命令用来显示指定命令的类型，判断给出的指令是内部指令还是外部指令。
